--- a/styles/styles.css
+++ b/styles/styles.css
@@ -220,3 +220,112 @@ template {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.skip-link {
+  position: absolute;
+  left: -1000px;
+  top: 5px;
+  z-index: 999;
+  background: white;
+  color: black;
+}
+
+.skip-link:focus {
+  left: 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+input {
+  min-width: 200px;
+  white-space: normal;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+.wrapper {
+  width: 100%;
+  max-width: 750px;
+  margin: 0 auto;
+}
+
+.disapear {
+  display: none;
+}
+
+button {
+  border: 1px solid #8b949e;
+  border-radius: 3px;
+  width: 200px;
+  height: 40px;
+  text-transform: uppercase;
+}
+
+body {
+  font-size: 125%;
+  color: #333;
+  text-align: center;
+  font-family: "Noto Sans", sans-serif;
+}
+
+h1 {
+  text-transform: uppercase;
+  font-size: 2.35rem;
+}
+
+.quoteContainer {
+  padding: 20px;
+  background-color: #d3d9e0;
+  width: 100%;
+  height: 1px;
+  min-height: 600px;
+}
+.quoteContainer .textContainer {
+  font-family: "Playfair Display", serif;
+  font-size: 3.35rem;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+.quoteContainer .textContainer p {
+  margin: 0;
+}
+
+.buttonContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+.buttonContainer #trumpButton {
+  background-color: rgba(255, 99, 71, 0.4);
+  border-color: tomato;
+}
+.buttonContainer #notButton {
+  background-color: rgba(0, 119, 187, 0.4);
+  border-color: #0077BB;
+}
+
+footer {
+  margin-top: 30px;
+}
