most of js logic is complete

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -34,4 +34,7 @@
     background-color: rgba($color:variables.$secondaryColor, $alpha:0.4);
     border-color: variables.$secondaryColor;
   }
+  &.disappear{
+    display: none;
+  }
 }
