--- a/styles/styles.css
+++ b/styles/styles.css
@@ -260,7 +260,7 @@ img {
   margin: 0 auto;
 }
 
-.disapear {
+.disappear {
   display: none;
 }
 
@@ -324,6 +324,9 @@ h1 {
 .buttonContainer #notButton {
   background-color: rgba(0, 119, 187, 0.4);
   border-color: #0077BB;
+}
+.buttonContainer.disappear {
+  display: none;
 }
 
 footer {
