--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -1,3 +1,10 @@
+@use './variables';
+
 footer {
   margin-top: 30px;
+  color: variables.$gray;
+  .wrapper {
+    border-top: 1px solid variables.$lightGray;
+    padding-top: 30px;
+  }
 }
