--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -2,7 +2,8 @@
 
 footer {
   margin-top: 30px;
-  color: variables.$gray;
+  color: variables.$white;
+  padding: 0 0 30px;
   .wrapper {
     border-top: 1px solid variables.$lightGray;
     padding-top: 30px;
