--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -14,6 +14,14 @@
   left: 0;
 }
 
+body {
+  // used https://superdesigner.co/tools/css-backgrounds
+  background: radial-gradient(transparent 79%, #cc3d3d 80%);
+        background-size: 1em 1em;
+        background-color: #e34040;
+        opacity: 1
+}
+
 
 ul { 
   list-style: none;
@@ -46,7 +54,7 @@ img {
 }
 
 button {
-  border: 1px solid variables.$gray;
+  border: 1px solid variables.$black;
   border-radius: 5px;
   width: 250px;
   height: 60px;
