--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -1,14 +1,18 @@
 @use './variables';
 @use './typography';
 
-
+header {
+  .wrapper {
+    border-bottom: 1px solid variables.$white;
+  }
+}
 
 .quoteContainer {
   padding: 20px;
-  background-color: variables.$lightGray;
+  // background-color: variables.$lightGray;
   width: 100%;
   height: 1px;
-  min-height: 600px;
+  min-height: 550px;
 
   .textContainer {
     font-family: 'Playfair Display', serif; 
@@ -21,34 +25,51 @@
     
     p {
       margin: 0;
+      color: variables.$white;
     }
   }
 }
 
 .buttonContainer {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   #trumpButton{
-    background-color: rgba($color:variables.$trumpRed, $alpha:0.4);
-    border-color: variables.$trumpRed;
+    background-color: rgba($color:variables.$trumpRed, $alpha:1);
+    border: 2px solid variables.$white;
     &:hover {
-      background-color: rgba($color:variables.$trumpRed, $alpha:0.8);
+      background-color: rgba($color:variables.$lightGray, $alpha:0.6);
+      border: 3px solid variables.$white;
+      color: variables.$black;
     }
   }
   #notButton{
-    background-color: rgba($color:variables.$secondaryColor, $alpha:0.4);
-    border-color: variables.$secondaryColor;
+    background-color: rgba($color:variables.$secondaryColor, $alpha:1);
+    border: 2px solid variables.$white;
     &:hover {
-      background-color: rgba($color:variables.$secondaryColor, $alpha:0.8);
+      background-color: rgba($color:variables.$lightGray, $alpha:0.6);
+      border: 3px solid variables.$white;
+      color: variables.$black;
     }
   }
   &.disappear{
     display: none;
   }
+  li {
+    margin: 0 15px;
+    button {
+      color: variables.$white;
+    }
+  }
+}
+
+.cta {
+  font-weight: 600;
+  max-width: 450px;
+  margin: 0 auto;
 }
 
 .answerPopup {
-  background-color: rgba( $color:variables.$gray, $alpha:0.8 );
+  background-color: rgba( $color:variables.$trumpRed, $alpha:0.8 );
   position: absolute;
   top: 0;
   left: 0;
