--- a/styles/styles.css
+++ b/styles/styles.css
@@ -415,3 +415,16 @@ footer .wrapper {
   border-top: 1px solid #d3d9e0;
   padding-top: 30px;
 }
+
+@media (max-width: 750px) {
+  h1 {
+    font-size: 2.35rem;
+    margin: 15px 0;
+  }
+  .quoteContainer {
+    min-height: 400px;
+  }
+  .quoteContainer .textContainer {
+    font-size: 3rem;
+  }
+}
