finished the media queries and added the score indcator below the h1

--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -15,11 +15,8 @@
 }
 
 body {
-  // used https://superdesigner.co/tools/css-backgrounds
-  background: radial-gradient(transparent 79%, #cc3d3d 80%);
-        background-size: 1em 1em;
-        background-color: #e34040;
-        opacity: 1
+  background-image: url('../img/trumpbg.png');
+  background-size: 25px;
 }
 
 
