--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -1,5 +1,6 @@
 // Main colours
-$trumpRed: #e34040;
+$trumpRed: #e17f00;
+$trumpeOther: #e33f40;
 $secondaryColor: #0077BB;
 $white: #F0F0F0;
 $gray: #8b949e;
