--- a/styles/styles.css
+++ b/styles/styles.css
@@ -266,7 +266,8 @@ img {
 }
 
 .disappear {
-  display: none;
+  -webkit-transform: scale(0);
+          transform: scale(0);
 }
 
 button {
@@ -379,6 +380,8 @@ header .wrapper .scoreLine {
   left: 0;
   width: 100%;
   height: 100%;
+  -webkit-transition: all 0.1s;
+  transition: all 0.1s;
 }
 .answerPopup .resultContainer {
   position: relative;
@@ -401,6 +404,9 @@ header .wrapper .scoreLine {
   color: #F0F0F0;
   -webkit-text-stroke: 2px #333;
   text-transform: uppercase;
+}
+.answerPopup .resultContainer .textContainer .answer.disappear {
+  display: none;
 }
 .answerPopup .resultContainer .textContainer span {
   font-size: 100px;
